[gd_scene load_steps=66 format=3 uid="uid://ch0um0qfy57rk"]

[ext_resource type="Script" path="res://Scenes/Arena.gd" id="1_l5hyt"]
[ext_resource type="Resource" uid="uid://coh34xecoab8g" path="res://Level/EnemyGroups/group5.tres" id="2_7i6s6"]
[ext_resource type="Texture2D" uid="uid://bgduad68wqtvd" path="res://Level/level.png" id="2_mbeb0"]
[ext_resource type="PackedScene" uid="uid://bs50o0b1v3s5r" path="res://Player/UI/BottomPlayerGUI.tscn" id="3_qo3d1"]
[ext_resource type="Script" path="res://Scenes/CharacterGUI.gd" id="4_grhpe"]
[ext_resource type="Script" path="res://Scenes/GrimCheaper.gd" id="4_vjqr2"]
[ext_resource type="PackedScene" uid="uid://bq32vdiv30t2u" path="res://Player/Abilities/cleave.tscn" id="5_qpn1t"]
[ext_resource type="Material" uid="uid://dwax5uwomrfi0" path="res://Shaders/HurtFlash.tres" id="6_cb21j"]
[ext_resource type="PackedScene" uid="uid://cqivytgoalyta" path="res://Player/Abilities/ultra_cleave.tscn" id="6_dydb5"]
[ext_resource type="Script" path="res://Scenes/FlashOnHit.gd" id="6_k8gt7"]
[ext_resource type="Resource" uid="uid://bp6lo7vsrhav8" path="res://Player/grim_cheaper_stats.tres" id="7_u0747"]
[ext_resource type="Script" path="res://Scenes/TheSheepard.gd" id="9_54lqa"]
[ext_resource type="SpriteFrames" uid="uid://6xd720ibxlu0" path="res://Player/GrimCheaper/grim_cheaper_frames.tres" id="9_buh30"]
[ext_resource type="PackedScene" uid="uid://xjahcj7id5nx" path="res://Player/Abilities/sheep_attack.tscn" id="12_tgu0n"]
[ext_resource type="PackedScene" uid="uid://b8sdmvoo1dmae" path="res://Player/Abilities/sheep_buff.tscn" id="13_ndy3r"]
[ext_resource type="Resource" uid="uid://dwydefp8cr4lw" path="res://Player/the_sheepard_stats.tres" id="15_njtfh"]
[ext_resource type="SpriteFrames" uid="uid://ce0sksbp1b1io" path="res://Player/Sheepard/sheepard_frames.tres" id="16_ixy2y"]
[ext_resource type="PackedScene" uid="uid://damqr88nxwy6a" path="res://Player/Arboarist/spin.tscn" id="17_8ahuv"]
[ext_resource type="Script" path="res://Scenes/Arboarist.gd" id="17_mc5g8"]
[ext_resource type="SpriteFrames" uid="uid://cah4huhysak2j" path="res://Player/Arboarist/arboarist_sprite_frames.tres" id="18_dfsx4"]
[ext_resource type="PackedScene" uid="uid://cep38mpyaw3j1" path="res://Player/Arboarist/boar_shield.tscn" id="19_76w3q"]
[ext_resource type="SpriteFrames" uid="uid://cqqhtmsf7jtyc" path="res://Player/UI/player_selected_arrow_frames.tres" id="19_g2pnk"]
[ext_resource type="Script" path="res://Player/Stat.gd" id="20_ifu6p"]
[ext_resource type="Script" path="res://Scenes/SelectedPlayerArrow.gd" id="20_xxp6y"]
[ext_resource type="Script" path="res://Player/PlayerStats.gd" id="21_m4u31"]
[ext_resource type="Texture2D" uid="uid://bakk28guwmqm0" path="res://Player/Sheepard/sp_portrait.png" id="24_kqsrd"]
[ext_resource type="Texture2D" uid="uid://byupeqxeairry" path="res://Player/Arboarist/ab_portrait.png" id="25_8evei"]
[ext_resource type="Script" path="res://Scenes/GrimCheeperSounds.gd" id="27_3s40q"]
[ext_resource type="AudioStream" uid="uid://cx2b68t84i237" path="res://Sounds/slice 1.wav" id="28_qhclc"]
[ext_resource type="AudioStream" uid="uid://dklk8npeopwmr" path="res://Sounds/slice 2.wav" id="29_gjiyb"]
[ext_resource type="AudioStream" uid="uid://3xra0dscbnmm" path="res://Sounds/slice 3.wav" id="30_7r0va"]
[ext_resource type="Texture2D" uid="uid://ctpxc31vgbh67" path="res://Player/Sheepard/sheep attack.png" id="30_ok0me"]
[ext_resource type="Texture2D" uid="uid://gqtvjrm66sh" path="res://Player/Sheepard/sheep skill.png" id="31_flu44"]
[ext_resource type="AudioStream" uid="uid://bxu8ku4d4dj6f" path="res://Sounds/super slice.wav" id="31_kkddq"]
[ext_resource type="Texture2D" uid="uid://dfyuuo8mdnc20" path="res://Player/UI/portrait_cover_sp.png" id="31_lvaba"]
[ext_resource type="AudioStream" uid="uid://baltx1qynm02d" path="res://Sounds/chicken ready.wav" id="32_5rccl"]
[ext_resource type="Texture2D" uid="uid://rjuko74ssr4o" path="res://Player/Arboarist/pig attack.png" id="33_v7ejp"]
[ext_resource type="Texture2D" uid="uid://w0cv7hlnj4rn" path="res://Player/Arboarist/Pig Skill.png" id="34_lbumw"]
[ext_resource type="Texture2D" uid="uid://d4l61rxco2req" path="res://Player/UI/portrait_cover_ab.png" id="35_682vb"]
[ext_resource type="Script" path="res://Scenes/SheeperdSounds.gd" id="37_1jjb3"]
[ext_resource type="AudioStream" uid="uid://qhn0tqa6hoh6" path="res://Sounds/sheep skill.wav" id="38_6ru58"]
[ext_resource type="AudioStream" uid="uid://c57uxmi5e7u32" path="res://Sounds/sheep attack.wav" id="39_bcmw1"]
[ext_resource type="AudioStream" uid="uid://ddjxh8676c0uo" path="res://Sounds/sheep ready.wav" id="41_tcoym"]
[ext_resource type="Script" path="res://Scenes/ArboaristSoundController.gd" id="46_jrk1k"]
[ext_resource type="AudioStream" uid="uid://cacu63y5yuf2t" path="res://Sounds/pig skill.wav" id="47_at8tl"]
[ext_resource type="AudioStream" uid="uid://cjk3oosg2up1m" path="res://Sounds/Music/ld52b.wav" id="48_457o3"]
[ext_resource type="AudioStream" uid="uid://c1cl5idmsu84j" path="res://Sounds/chainsaw.wav" id="48_fxq07"]
[ext_resource type="AudioStream" uid="uid://dt13geey6c80m" path="res://Sounds/pig ready.wav" id="51_xghdg"]

[sub_resource type="Animation" id="Animation_0dauk"]
resource_name = "LevelStart"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [2.0],
"method": &"walk_on_players"
}, {
"args": [],
"method": &"spawn_enemies"
}, {
"args": [],
"method": &"enable_entities"
}]
}

[sub_resource type="Animation" id="Animation_haa0u"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8f452"]
_data = {
"LevelStart": SubResource("Animation_0dauk"),
"RESET": SubResource("Animation_haa0u")
}

[sub_resource type="TileMapPattern" id="TileMapPattern_tn2fb"]
tile_data = PackedInt32Array(0, 131073, 0, 65536, 262145, 0, 1, 196609, 0, 65537, 327681, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ssi7g"]
texture = ExtResource("2_mbeb0")
texture_region_size = Vector2i(64, 64)
use_texture_padding = false
0:1/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
6:1/0 = 0
5:1/0 = 0

[sub_resource type="TileSet" id="TileSet_8kn6x"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_ssi7g")
pattern_0 = SubResource("TileMapPattern_tn2fb")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_61i3l"]
radius = 38.0
height = 102.0

[sub_resource type="Resource" id="Resource_1svkk"]
script = ExtResource("20_ifu6p")
base_value = 6.0
level_bonus = 2.0

[sub_resource type="Resource" id="Resource_g7ort"]
script = ExtResource("20_ifu6p")
base_value = 0.6
level_bonus = 0.5

[sub_resource type="Resource" id="Resource_4st0b"]
script = ExtResource("20_ifu6p")
base_value = 1.5
level_bonus = 0.15

[sub_resource type="Resource" id="Resource_bepct"]
script = ExtResource("20_ifu6p")
base_value = 30.0
level_bonus = 2.0

[sub_resource type="Resource" id="Resource_4l1dr"]
script = ExtResource("20_ifu6p")
base_value = 1.0
level_bonus = 0.05

[sub_resource type="Resource" id="Resource_wrn2r"]
script = ExtResource("20_ifu6p")
base_value = 0.1
level_bonus = 0.02

[sub_resource type="Resource" id="Resource_3y7j6"]
script = ExtResource("20_ifu6p")
base_value = 20.0
level_bonus = 0.0

[sub_resource type="Resource" id="Resource_lu75e"]
script = ExtResource("20_ifu6p")
base_value = 5.0
level_bonus = 0.2

[sub_resource type="Resource" id="Resource_ohxd4"]
script = ExtResource("20_ifu6p")
base_value = 0.4
level_bonus = 0.02

[sub_resource type="Resource" id="Resource_gxlbg"]
script = ExtResource("21_m4u31")
player_name = "The Arboarist"
hp = SubResource("Resource_bepct")
atk = SubResource("Resource_1svkk")
atk_speed = SubResource("Resource_g7ort")
move_speed = SubResource("Resource_4l1dr")
attack_scaling = SubResource("Resource_4st0b")
skill_scaling = SubResource("Resource_ohxd4")
skill_cooldown = SubResource("Resource_3y7j6")
skill_duration = SubResource("Resource_lu75e")
passive = SubResource("Resource_wrn2r")

[node name="Arena" type="Node2D"]
script = ExtResource("1_l5hyt")
spawnable_groups = [ExtResource("2_7i6s6")]
spawnable_area = Rect2(0, 200, 700, 400)
level_size = Vector2(1152, 704)
difficulty_level = 6

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerGUI2" type="Control" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -337.0
offset_top = -106.0
offset_right = 337.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GUI/PlayerGUI2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_right = 11.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0156863, 0.0666667, 0.0313726, 0.396078)

[node name="PlayerGUI" type="HBoxContainer" parent="CanvasLayer/GUI/PlayerGUI2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control" parent="CanvasLayer/GUI/PlayerGUI2/PlayerGUI" instance=ExtResource("3_qo3d1")]
layout_mode = 2

[node name="Control4" type="Control" parent="CanvasLayer/GUI/PlayerGUI2/PlayerGUI"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Control2" parent="CanvasLayer/GUI/PlayerGUI2/PlayerGUI" instance=ExtResource("3_qo3d1")]
layout_mode = 2
player_path = NodePath("../../../../../Players/TheSheepard")
player_icon = ExtResource("24_kqsrd")
player_border = ExtResource("31_lvaba")
attack_icon = ExtResource("30_ok0me")
skill_icon = ExtResource("31_flu44")

[node name="Control5" type="Control" parent="CanvasLayer/GUI/PlayerGUI2/PlayerGUI"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Control3" parent="CanvasLayer/GUI/PlayerGUI2/PlayerGUI" instance=ExtResource("3_qo3d1")]
layout_mode = 2
player_path = NodePath("../../../../../Players/Arboarist")
player_icon = ExtResource("25_8evei")
player_border = ExtResource("35_682vb")
attack_icon = ExtResource("33_v7ejp")
skill_icon = ExtResource("34_lbumw")

[node name="LevelStart" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8f452")
}

[node name="TopWall" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8kn6x")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 262161, 1, 0, 393233, 1, 0, 458769, 65537, 0, 524305, 1, 0, 589841, 1, 0, 655377, 1, 0, 655376, 1, 0, 655375, 1, 0, 655374, 1, 0, 655373, 1, 0, 655372, 1, 0, 655371, 1, 0, 655370, 1, 0, 655369, 1, 0, 655368, 1, 0, 655367, 1, 0, 655366, 1, 0, 655365, 1, 0, 655364, 1, 0, 655363, 1, 0, 655362, 1, 0, 655361, 1, 0, 655360, 1, 0, 589824, 65537, 0, 524288, 1, 0, 458752, 65537, 0, 393216, 1, 0, 327680, 1, 0, 262144, 1, 0, 196608, 1, 0, 131072, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 65537, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 65537, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 65537, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 131088, 196609, 0, 131087, 131073, 0, 131086, 65537, 0, 131085, 1, 0, 131082, 1, 0, 131081, 1, 0, 131080, 196609, 0, 131079, 131073, 0, 131078, 1, 0, 131077, 1, 0, 131076, 1, 0, 131075, 1, 0, 131074, 327681, 1, 131073, 1, 0, 196609, 1, 0, 196610, 65537, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 262145, 0, 196617, 65537, 0, 196621, 1, 0, 196618, 1, 0, 196622, 1, 0, 262156, 1, 0, 196624, 458753, 0, 458768, 1, 0, 524304, 1, 0, 589840, 1, 0, 589831, 65537, 0, 589830, 1, 0, 589829, 1, 0, 589826, 1, 0, 589825, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 65537, 0, 589835, 262145, 0, 589836, 327681, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 524303, 327681, 1, 458766, 1, 0, 393230, 1, 0, 262159, 131073, 0, 393231, 65537, 0, 458767, 65537, 0, 327694, 1, 0, 262158, 1, 0, 327693, 1, 0, 393229, 1, 0, 458765, 65537, 0, 524300, 196609, 0, 458764, 1, 0, 393228, 1, 0, 327692, 1, 0, 458763, 1, 0, 524299, 131073, 0, 262157, 1, 0, 524301, 1, 0, 393226, 1, 0, 327690, 327681, 1, 262154, 65537, 0, 458762, 65537, 0, 524298, 1, 0, 458761, 1, 0, 327691, 65537, 0, 393225, 1, 0, 327689, 1, 0, 262153, 1, 0, 458760, 1, 0, 524297, 1, 0, 262152, 1, 0, 327688, 65537, 0, 393224, 1, 0, 524296, 1, 0, 458759, 327681, 0, 393223, 196609, 0, 327687, 1, 0, 262151, 1, 0, 524295, 1, 0, 262150, 65537, 0, 327686, 1, 0, 393222, 131073, 0, 458757, 1, 0, 524293, 1, 0, 393221, 65537, 0, 327685, 1, 0, 262149, 1, 0, 458758, 262145, 0, 524294, 1, 0, 393219, 1, 0, 458755, 1, 0, 458756, 65537, 0, 393220, 1, 0, 327682, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 262146, 1, 0, 524289, 1, 0, 458753, 1, 0, 393217, 1, 0, 327681, 65537, 0, 262145, 1, 0, 131084, 327681, 1, 524291, 327681, 1, 327684, 327681, 1, 262148, 1, 0, 262147, 1, 0, 327683, 1, 0, 524292, 1, 0, 589828, 65537, 0, 589827, 1, 0, 262155, 1, 0, 196619, 1, 0, 131083, 1, 0, 196620, 1, 0, 196623, 262145, 0, 327695, 262145, 0, 327696, 327681, 1, 262160, 327681, 0, 327697, 1, 0, 393232, 1, 0, 524302, 1, 0, 196616, 327681, 0, 393227, 1, 0)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(17, 1, 1, 0, 1, 1, 16, 1, 1, 15, 1, 1, 14, 1, 1, 13, 1, 1, 12, 1, 1, 11, 1, 1, 10, 1, 1, 9, 1, 1, 8, 1, 1, 7, 1, 1, 6, 1, 1, 5, 1, 1, 4, 1, 1, 3, 1, 1, 2, 1, 1, 1, 1, 1, 655360, 1, 1, 655361, 1, 1, 655362, 1, 1, 655363, 1, 1, 655364, 1, 1, 655365, 1, 1, 655366, 1, 1, 655367, 1, 1, 655368, 1, 1, 655369, 1, 1, 655370, 1, 1, 655371, 1, 1, 655372, 1, 1, 655373, 1, 1, 655374, 1, 1, 655375, 1, 1, 655376, 1, 1, 655377, 1, 1)

[node name="Enemies" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]
y_sort_enabled = true

[node name="GrimCheaper" type="Node2D" parent="Players" groups=["player"]]
texture_filter = 1
position = Vector2(1256, 347)
script = ExtResource("4_vjqr2")
normal_attack = ExtResource("5_qpn1t")
skill = ExtResource("6_dydb5")
player_stats = ExtResource("7_u0747")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Players/GrimCheaper"]
material = ExtResource("6_cb21j")
use_parent_material = true
frames = ExtResource("9_buh30")
animation = &"attack"
flip_h = true

[node name="SelectedPlayerArrow" type="AnimatedSprite2D" parent="Players/GrimCheaper/AnimatedSprite"]
visible = false
texture_filter = 1
position = Vector2(1, -69)
frames = ExtResource("19_g2pnk")
playing = true
script = ExtResource("20_xxp6y")

[node name="CharacterGUI" type="Control" parent="Players/GrimCheaper"]
layout_mode = 3
anchors_preset = 0
offset_left = -53.0
offset_top = 62.0
offset_right = 50.237
offset_bottom = 76.363
script = ExtResource("4_grhpe")

[node name="HealthBar" type="ProgressBar" parent="Players/GrimCheaper/CharacterGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.14441e-05
offset_bottom = 12.637
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="Players/GrimCheaper"]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/GrimCheaper/Area2D"]
shape = SubResource("CapsuleShape2D_61i3l")

[node name="Attack" type="Node2D" parent="Players/GrimCheaper"]

[node name="AttackTimer" type="Timer" parent="Players/GrimCheaper"]
wait_time = 2.0

[node name="SkillTimer" type="Timer" parent="Players/GrimCheaper"]
one_shot = true

[node name="FlashOnHit" type="Node" parent="Players/GrimCheaper" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_k8gt7")
sprite = NodePath("../AnimatedSprite")

[node name="GrimCheeperSound" type="Node2D" parent="Players/GrimCheaper"]
script = ExtResource("27_3s40q")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Players/GrimCheaper/GrimCheeperSound"]
stream = ExtResource("28_qhclc")

[node name="AttackSound2" type="AudioStreamPlayer2D" parent="Players/GrimCheaper/GrimCheeperSound"]
stream = ExtResource("29_gjiyb")

[node name="AttackSound3" type="AudioStreamPlayer2D" parent="Players/GrimCheaper/GrimCheeperSound"]
stream = ExtResource("30_7r0va")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="Players/GrimCheaper/GrimCheeperSound"]

[node name="SkillSound" type="AudioStreamPlayer2D" parent="Players/GrimCheaper/GrimCheeperSound"]
stream = ExtResource("31_kkddq")

[node name="ReadySound" type="AudioStreamPlayer2D" parent="Players/GrimCheaper/GrimCheeperSound"]
stream = ExtResource("32_5rccl")

[node name="TheSheepard" type="Node2D" parent="Players" groups=["player"]]
texture_filter = 1
position = Vector2(1339, 505)
script = ExtResource("9_54lqa")
normal_attack = ExtResource("12_tgu0n")
skill = ExtResource("13_ndy3r")
player_stats = ExtResource("15_njtfh")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Players/TheSheepard"]
material = ExtResource("6_cb21j")
use_parent_material = true
frames = ExtResource("16_ixy2y")
animation = &"walk"
flip_h = true

[node name="SelectedPlayerArrow" type="AnimatedSprite2D" parent="Players/TheSheepard/AnimatedSprite"]
visible = false
texture_filter = 1
position = Vector2(1, -69)
frames = ExtResource("19_g2pnk")
playing = true
script = ExtResource("20_xxp6y")

[node name="CharacterGUI" type="Control" parent="Players/TheSheepard"]
layout_mode = 3
anchors_preset = 0
offset_left = -53.0
offset_top = 62.0
offset_right = 50.237
offset_bottom = 76.363
script = ExtResource("4_grhpe")

[node name="HealthBar" type="ProgressBar" parent="Players/TheSheepard/CharacterGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.14441e-05
offset_bottom = 12.637
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="Players/TheSheepard"]
position = Vector2(1, 12)
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/TheSheepard/Area2D"]
shape = SubResource("CapsuleShape2D_61i3l")

[node name="Attack" type="Node2D" parent="Players/TheSheepard"]

[node name="AttackTimer" type="Timer" parent="Players/TheSheepard"]
wait_time = 2.0

[node name="SkillTimer" type="Timer" parent="Players/TheSheepard"]
one_shot = true

[node name="FlashOnHit" type="Node" parent="Players/TheSheepard" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_k8gt7")
sprite = NodePath("../AnimatedSprite")

[node name="Buffs" type="Node2D" parent="Players/TheSheepard"]

[node name="SheephardSound" type="Node2D" parent="Players/TheSheepard"]
script = ExtResource("37_1jjb3")

[node name="SkillSound" type="AudioStreamPlayer2D" parent="Players/TheSheepard/SheephardSound"]
stream = ExtResource("38_6ru58")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Players/TheSheepard/SheephardSound"]
stream = ExtResource("39_bcmw1")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="Players/TheSheepard/SheephardSound"]

[node name="ReadySound" type="AudioStreamPlayer2D" parent="Players/TheSheepard/SheephardSound"]
stream = ExtResource("41_tcoym")
volume_db = 15.0

[node name="Arboarist" type="Node2D" parent="Players" groups=["player"]]
texture_filter = 1
position = Vector2(1301, 153)
script = ExtResource("17_mc5g8")
normal_attack = ExtResource("17_8ahuv")
skill = ExtResource("19_76w3q")
player_stats = SubResource("Resource_gxlbg")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Players/Arboarist"]
material = ExtResource("6_cb21j")
use_parent_material = true
frames = ExtResource("18_dfsx4")
animation = &"walk"
frame = 1
flip_h = true

[node name="SelectedPlayerArrow" type="AnimatedSprite2D" parent="Players/Arboarist/AnimatedSprite"]
visible = false
texture_filter = 1
position = Vector2(1, -85)
frames = ExtResource("19_g2pnk")
playing = true
script = ExtResource("20_xxp6y")

[node name="CharacterGUI" type="Control" parent="Players/Arboarist"]
layout_mode = 3
anchors_preset = 0
offset_left = -53.0
offset_top = 62.0
offset_right = 50.237
offset_bottom = 76.363
script = ExtResource("4_grhpe")

[node name="HealthBar" type="ProgressBar" parent="Players/Arboarist/CharacterGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.14441e-05
offset_bottom = 12.637
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="Players/Arboarist"]
position = Vector2(1, 12)
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Arboarist/Area2D"]
shape = SubResource("CapsuleShape2D_61i3l")

[node name="Attack" type="Node2D" parent="Players/Arboarist"]

[node name="AttackTimer" type="Timer" parent="Players/Arboarist"]
wait_time = 2.0

[node name="SkillTimer" type="Timer" parent="Players/Arboarist"]
one_shot = true

[node name="FlashOnHit" type="Node" parent="Players/Arboarist" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_k8gt7")
sprite = NodePath("../AnimatedSprite")

[node name="Buffs" type="Node2D" parent="Players/Arboarist"]

[node name="ArboaristSoundController" type="Node2D" parent="Players/Arboarist"]
script = ExtResource("46_jrk1k")

[node name="SkillSound" type="AudioStreamPlayer2D" parent="Players/Arboarist/ArboaristSoundController"]
stream = ExtResource("47_at8tl")
volume_db = 5.0

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Players/Arboarist/ArboaristSoundController"]
stream = ExtResource("48_fxq07")
volume_db = 5.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="Players/Arboarist/ArboaristSoundController"]

[node name="ReadySound" type="AudioStreamPlayer2D" parent="Players/Arboarist/ArboaristSoundController"]
stream = ExtResource("51_xghdg")
volume_db = 5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("48_457o3")
volume_db = -6.0
autoplay = true

[connection signal="attack_used" from="Players/GrimCheaper" to="Players/GrimCheaper/GrimCheeperSound" method="_on_grim_cheaper_attack_used"]
[connection signal="control_changed" from="Players/GrimCheaper" to="." method="_on_grim_cheaper_control_changed"]
[connection signal="control_changed" from="Players/GrimCheaper" to="Players/GrimCheaper/AnimatedSprite/SelectedPlayerArrow" method="_on_player_control_changed"]
[connection signal="control_changed" from="Players/GrimCheaper" to="Players/GrimCheaper/GrimCheeperSound" method="_on_grim_cheaper_control_changed"]
[connection signal="death" from="Players/GrimCheaper" to="Players/GrimCheaper/GrimCheeperSound" method="_on_grim_cheaper_death"]
[connection signal="health_changed" from="Players/GrimCheaper" to="Players/GrimCheaper/CharacterGUI" method="_on_health_changed"]
[connection signal="health_changed" from="Players/GrimCheaper" to="Players/GrimCheaper/FlashOnHit" method="_on_health_changed"]
[connection signal="skill_used" from="Players/GrimCheaper" to="Players/GrimCheaper/GrimCheeperSound" method="_on_grim_cheaper_skill_used"]
[connection signal="stats_changed" from="Players/GrimCheaper" to="Players/GrimCheaper/CharacterGUI" method="_on_grim_cheaper_stats_changed"]
[connection signal="timeout" from="Players/GrimCheaper/AttackTimer" to="Players/GrimCheaper" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Players/GrimCheaper/SkillTimer" to="Players/GrimCheaper" method="_on_skill_timer_timeout"]
[connection signal="attack_used" from="Players/TheSheepard" to="Players/TheSheepard/SheephardSound" method="_on_the_sheepard_attack_used"]
[connection signal="control_changed" from="Players/TheSheepard" to="Players/TheSheepard/AnimatedSprite/SelectedPlayerArrow" method="_on_player_control_changed"]
[connection signal="control_changed" from="Players/TheSheepard" to="Players/TheSheepard/SheephardSound" method="_on_the_sheepard_control_changed"]
[connection signal="death" from="Players/TheSheepard" to="Players/TheSheepard/SheephardSound" method="_on_the_sheepard_death"]
[connection signal="health_changed" from="Players/TheSheepard" to="Players/TheSheepard/CharacterGUI" method="_on_health_changed"]
[connection signal="health_changed" from="Players/TheSheepard" to="Players/TheSheepard/FlashOnHit" method="_on_health_changed"]
[connection signal="skill_used" from="Players/TheSheepard" to="Players/TheSheepard/SheephardSound" method="_on_the_sheepard_skill_used"]
[connection signal="stats_changed" from="Players/TheSheepard" to="Players/TheSheepard/CharacterGUI" method="_on_grim_cheaper_stats_changed"]
[connection signal="timeout" from="Players/TheSheepard/AttackTimer" to="Players/TheSheepard" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Players/TheSheepard/SkillTimer" to="Players/TheSheepard" method="_on_skill_timer_timeout"]
[connection signal="attack_used" from="Players/Arboarist" to="Players/Arboarist/ArboaristSoundController" method="_on_arboarist_attack_used"]
[connection signal="control_changed" from="Players/Arboarist" to="Players/Arboarist/AnimatedSprite/SelectedPlayerArrow" method="_on_player_control_changed"]
[connection signal="control_changed" from="Players/Arboarist" to="Players/Arboarist/ArboaristSoundController" method="_on_arboarist_control_changed"]
[connection signal="death" from="Players/Arboarist" to="Players/Arboarist/ArboaristSoundController" method="_on_arboarist_death"]
[connection signal="health_changed" from="Players/Arboarist" to="Players/Arboarist/CharacterGUI" method="_on_health_changed"]
[connection signal="health_changed" from="Players/Arboarist" to="Players/Arboarist/FlashOnHit" method="_on_health_changed"]
[connection signal="skill_used" from="Players/Arboarist" to="Players/Arboarist/ArboaristSoundController" method="_on_arboarist_skill_used"]
[connection signal="stats_changed" from="Players/Arboarist" to="Players/Arboarist/CharacterGUI" method="_on_grim_cheaper_stats_changed"]
[connection signal="timeout" from="Players/Arboarist/AttackTimer" to="Players/Arboarist" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Players/Arboarist/SkillTimer" to="Players/Arboarist" method="_on_skill_timer_timeout"]
